# Group15

./: .gitignore  .gitmodules  README.md
DatabaseStorage/: DatabaseStorage.sln
DatabaseStorage/DatabaseStorage/: AssemblyInfo.cpp  DatabaseStorage.cpp  DatabaseStorage.h  DatabaseStorage.vcxproj  DatabaseStorage.vcxproj.filters
DatabaseStorage/DatabaseStorage/x64/Debug/: DatabaseStorage.assets.cache
MauiApp3/: ApiConstants.cs  AppShell.xaml  AppShell.xaml.cs  HomePage.xaml  HomePage.xaml.cs  HomePageViewModel.cs  LegendItem.cs  MainPage.xaml  MainPage.xaml.cs  MauiApp3.csproj  MauiApp3.sln  MauiProgram.cs  TemperatureInfo.cs  ViewModel.cs  WeatherData.cs  WeatherResponse.cs
Special group Database/: Create_Tables.sql
WeatherApi/: Program.cs  WeatherApi.csproj  WeatherApi.http  WeatherApi.sln  WeatherDbContext.cs  appsettings.json
WeatherApi/Controllers/: WeatherController.cs
WeatherApi/Dtos/: WeatherResponseDto.cs
WeatherApi/Models/: WeatherData.cs
WeatherApi/Properties/: launchSettings.json
special-group-project/: CMakeLists.txt  Callback.h  Devices.cpp  Devices.h  Gateways.cpp  Gateways.h  Messages.cpp  Messages.h  Postgre_connection.cpp  Postgre_connection.h  certificate.txt  main.cpp
